[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logviz"
version = "0.1.0"
authors = [
    { name = "okwesi", email = "okwesi73@gmail.com" },
]
description = "LogViz: A Python logging library for visualized, structured, and customizable console output."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["logging", "colors", "visual", "structured", "developer tools"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    # Add any runtime dependencies here. For basic logging, none yet.
    # If we later decide to use 'colorama' for Windows terminal support, it goes here.
]

[project.urls]
"Homepage" = "" # <--- IMPORTANT: Update with your GitHub repo URL
"Bug Tracker" = "" # <--- IMPORTANT: Update with your GitHub repo issues URL

[project.optional-dependencies]
dev = [
    "pytest", # For testing
    "twine", # For uploading to PyPI
    "build", # For building distributions
]

[tool.setuptools.packages.find]
where = ["."] # Look for packages in the current directory
include = ["logviz*"] # Include anything starting with 'logviz' (e.g., 'logviz' and 'logviz.submodule')